--- a/APIModels/APIModels.csproj
+++ b/APIModels/APIModels.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientModel.cs" />
+    <Compile Include="JobData.cs" />
+    <Compile Include="JobModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
