--- a/APIModels/APIModels.csproj
+++ b/APIModels/APIModels.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ClientModel.cs" />
     <Compile Include="JobData.cs" />
     <Compile Include="JobModel.cs" />
+    <Compile Include="JobResultModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
